--- a/public/ng/views/index.html
+++ b/public/ng/views/index.html
@@ -20,7 +20,7 @@
     <![endif]-->
 </head>
 
-<body ng-app="spicyTaste">
+<body ng-app="spicyTaste" ng-controller="MainController as main">
     <header>
         <nav class="navbar navbar-default">
             <div class="container-fluid">
@@ -38,7 +38,7 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="divMenu">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="/dishes">Dish<span class="sr-only">(current)</span></a>
+                        <li class="active"><a href="/dishes">Dish</a>
                         </li>
                         <li><a href="/places">Restaurant</a>
                         </li>
@@ -47,8 +47,14 @@
                         </li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="/me">My Account</a>
+                        <li>
+                            <a ng-if="main.currentUser" href="/me">{{main.currentUser.email}}</a>
                         </li>
+                        <li>
+                            <a ng-if="!main.currentUser" href="/login">Login</a>
+                            <a ng-if="main.currentUser" ng-click="main.logout()">Logout</a>
+                        </li>
+
 
                     </ul>
                 </div>
