--- a/public/ng/views/pages/admin/dish/list.html
+++ b/public/ng/views/pages/admin/dish/list.html
@@ -13,6 +13,10 @@
                     <a href="#" class="btn btn-default" role="button">like</a>
                     <a href="#" class="btn btn-default" role="button">share</a>
                 </p>
+                <p>
+                    <a href="/dishes/{{dish._id}}" class="btn btn-info" role="button">edit</a>
+                    <a href="#" ng-click="dishList.deleteDish(dish._id)" class="btn btn-danger" role="button">delete</a>
+                </p>
             </div>
         </div>
     </div>
