--- a/public/css/site.styl
+++ b/public/css/site.styl
@@ -1,3 +1,11 @@
-.test{
-	color: red;
+.sm-profile-photo{
+	width: 48px;
+	height: 48px;
 }
+
+.xs-profile-photo{
+	width: 36px;
+	height: 36px;
+}
+
+
