--- a/public/ng/views/index.html
+++ b/public/ng/views/index.html
@@ -6,13 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Spicy Taste</title>
-
     <!-- FOR ANGULAR ROUTING -->
     <base href="/">
-
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="assets/site.css">
-
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -34,7 +31,6 @@
                     </button>
                     <a class="navbar-brand" href="#">Spicy Taste</a>
                 </div>
-
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="divMenu">
                     <ul class="nav navbar-nav">
@@ -48,14 +44,12 @@
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
                         <li>
-                            <a ng-if="main.currentUser" href="/me">{{main.currentUser.email}}</a>
+                            <a ng-if="main.currentUser" href="/me"><img src="{{main.currentUser.photoUrl}}" class="sm-profile-photo"></a>
                         </li>
                         <li>
                             <a ng-if="!main.currentUser" href="/login">Login</a>
                             <a ng-if="main.currentUser" ng-click="main.logout()">Logout</a>
                         </li>
-
-
                     </ul>
                 </div>
                 <!-- /.navbar-collapse -->
@@ -68,6 +62,7 @@
     </main>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.13/angular.min.js"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.13/angular-route.min.js"></script>
+    <script type="text/javascript" src="assets/angular-md5/angular-md5.min.js"></script>
     <script type="text/javascript" src="assets/app.js"></script>
 </body>
 
