--- a/public/ng/views/pages/admin/dish/single.html
+++ b/public/ng/views/pages/admin/dish/single.html
@@ -27,7 +27,7 @@
     <div class="form-group">
         <label for="inputTags" class="col-sm-2 control-label">Tags</label>
         <div class="col-sm-10">
-            <input type="text" class="form-control" id="inputTags" placeholder="seperate tags by space" ng-model="dishManage.dish.tags">
+            <input type="text" class="form-control" id="inputTags" placeholder="seperate tags by comma" ng-model="dishManage.dish.tags" ng-list>
         </div>
     </div>
     <div class="form-group">
