--- a/public/ng/views/pages/admin/dish/single.html
+++ b/public/ng/views/pages/admin/dish/single.html
@@ -31,7 +31,37 @@
         </div>
     </div>
     <div class="form-group">
+        <label for="inputIngredients" class="col-sm-2 control-label">Ingredients</label>
+        <div class="col-sm-10">
+            <input type="text" class="form-control" id="inputIngredients" placeholder="seperate tags by comma" ng-model="dishManage.dish.ingredients" ng-list>
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="inputInstructions" class="col-sm-2 control-label">Instructions</label>
+    </div>
+    <div class="form-group" ng-repeat="instruction in dishManage.dish.instructions">
+        <div class="col-sm-2 text-right">
+            <a class="btn btn-default btn-sm" href="#" ng-click="dishManage.removeInstruction($index)">remove</a>
+            <label class="control-label">{{$index+1}}</label>
+        </div>
+        <div class="col-sm-10">
+            <p class="col-sm-10 form-control" contenteditable ng-model="dishManage.dish.instructions[$index]" title="click to edit">{{instruction}}</p>
+        </div>
+    </div>
+    <div class="form-group">
+        <label class="col-sm-2 control-label">{{dishManage.dish.instructions.length +1}}</label>
+        <div class="col-sm-10">
+            <textarea class="form-control" rows=3 ng-model="dishManage.newInstruction"></textarea>
+        </div>
+    </div>
+    <div ng-if="dishManage.newInstruction.length > 0" class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
+            <a ng-click="dishManage.addInstruction()" class="btn btn-default">Plus One</a>
+        </div>
+    </div>
+    <hr class="divider">
+    <div class="form-group">
+        <div class="col-sm-offset-10 col-sm-2 text-right">
             <button type="submit" class="btn btn-primary">Save</button>
         </div>
     </div>
