dish photoes, ingredients, instructions

--- a/public/ng/views/pages/admin/dish/list.html
+++ b/public/ng/views/pages/admin/dish/list.html
@@ -1,3 +1,7 @@
+<div class="row text-right">
+    <a href="#" class="btn btn-primary" ng-click="dishList.addDish()">New Dish</a>
+</div>
+<hr>
 <div class="row">
     <div ng-repeat="dish in dishList.dishes" class="col-sm-6 col-md-4">
         <div class="thumbnail">
