--- a/public/ng/views/pages/admin/dish/single.html
+++ b/public/ng/views/pages/admin/dish/single.html
@@ -31,15 +31,47 @@
         </div>
     </div>
     <div class="form-group">
+        <label for="inputBlog" class="col-sm-2 control-label">Blog</label>
+        <div class="col-sm-10">
+            <textarea rows="3" class="form-control" ng-model="dishManage.dish.blog"></textarea>
+        </div>
+    </div>
+    <div class="form-group">
         <label for="inputIngredients" class="col-sm-2 control-label">Ingredients</label>
         <div class="col-sm-10">
             <input type="text" class="form-control" id="inputIngredients" placeholder="seperate tags by comma" ng-model="dishManage.dish.ingredients" ng-list>
         </div>
     </div>
     <div class="form-group">
+        <label class="col-sm-2 control-label">Photos</label>
+        <div class="col-sm-10" ng-if="dishManage.dish.photos.length > 0">
+            <div class="row">
+                <div ng-repeat="photo in dishManage.dish.photos track by $index" class="col-sm-4 col-xs-6 thumbnail">
+                    <p><a href="#" ng-click="dishManage.removePhoto($index)" class="btn btn-default">remove</a></p>
+                    <img ng-src="{{photo}}">
+                    <div class="caption">
+                        <p contenteditable ng-model="dishManage.dish.photos[$index]">{{photo}}</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="inputPhoto" class="col-sm-2 control-label">Add Photo</label>
+        <div class="col-sm-10">
+            <input type="text" class="form-control" id="inputPhoto" ng-model="dishManage.newPhoto">
+        </div>
+    </div>
+    <div ng-if="dishManage.newPhoto.length > 0" class="form-group">
+        <div class="col-sm-offset-2 col-sm-10">
+            <a ng-click="dishManage.addPhoto()" class="btn btn-default">Plus Photo</a>
+        </div>
+    </div>
+    <hr>
+    <div class="form-group">
         <label for="inputInstructions" class="col-sm-2 control-label">Instructions</label>
     </div>
-    <div class="form-group" ng-repeat="instruction in dishManage.dish.instructions">
+    <div class="form-group" ng-repeat="instruction in dishManage.dish.instructions track by $index">
         <div class="col-sm-2 text-right">
             <a class="btn btn-default btn-sm" href="#" ng-click="dishManage.removeInstruction($index)">remove</a>
             <label class="control-label">{{$index+1}}</label>
@@ -56,7 +88,7 @@
     </div>
     <div ng-if="dishManage.newInstruction.length > 0" class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
-            <a ng-click="dishManage.addInstruction()" class="btn btn-default">Plus One</a>
+            <a ng-click="dishManage.addInstruction()" class="btn btn-default">Plus Instruction</a>
         </div>
     </div>
     <hr class="divider">
