--- a/public/ng/views/index.html
+++ b/public/ng/views/index.html
@@ -27,7 +27,7 @@
             <md-icon md-svg-icon="login" class="login-btn-icon"></md-icon>
         </md-button>
         <md-button ng-if="main.currentUser" ng-href="/me">
-            <img ng-src="{{main.currentUser.photoUrl}}" class="md-avatar" alt="{{main.currentUser.userName}}">
+            <img ng-src="{{main.currentUser.photoUrl}}" class="avatar" alt="{{main.currentUser.userName}}">
         </md-button>
         <md-button hide-gt-sm ng-click="main.toggleMobileMenu()">
             <md-icon md-svg-icon="menu"></md-icon>
