--- a/public/assets/site.css
+++ b/public/assets/site.css
@@ -28,6 +28,66 @@ body {
   height: 36px;
   width: 100px;
 }
+.tile-grid-container md-grid-tile {
+  transition: all 500ms ease-out;
+}
+.tile-grid-container img {
+  width: 100%;
+  height: 100%;
+}
+.tile-grid-container md-grid-tile-footer h4 {
+  font-weight: bold;
+}
+.flip-container {
+  perspective: 1000;
+}
+.flip-container,
+.flipper,
+.front,
+.back {
+  height: 100%;
+  width: 100%;
+}
+.flip-container:hover .flipper,
+.flip-container.hover .flipper {
+  transform: rotateY(180deg);
+}
+.flipper {
+  transition: 0.8s;
+  transform-style: preserve-3d;
+  position: relative;
+}
+.front,
+.back {
+  backface-visibility: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.front {
+  z-index: 2;
+  transform: rotateY(0deg);
+}
+.back {
+  transform: rotateY(180deg);
+}
+.big-tile md-whiteframe {
+  padding: 24px 32px;
+}
+.small-tile h3 {
+  font-size: 0.8em !important;
+}
+.small-tile p {
+  font-size: 10px !important;
+}
+.italic-list {
+  font-family: "Montserrat", sans-serif;
+  font-style: italic;
+  font-color: #fff;
+}
+.italic-list li {
+  padding: 4px 0;
+}
 .login-btn-icon {
   height: 48px;
   width: 48px;
@@ -38,6 +98,21 @@ body {
 }
 .login-dialog .md-button {
   margin: 0;
+}
+.avatar {
+  position: relative;
+  width: 90px;
+  height: 90px;
+  border: 1px solid #ddd;
+  border-radius: 50%;
+  display: inline-block;
+  overflow: hidden;
+  margin: 0px;
+  vertical-align: middle;
+  zoom: 0.7;
+  transform: translateZ(0);
+  -webkit-transform: scale(0.7);
+  -moz-transform: scale(0.7);
 }
 .md-button {
   border-radius: 0 !important;
