--- a/public/ng/views/dialogs/login.html
+++ b/public/ng/views/dialogs/login.html
@@ -1,12 +1,12 @@
-<md-dialog class="login-dialog" aria-label="Login/SignUp" flex="40">
+<md-dialog class="login-dialog" aria-label="Login/SignUp" flex-sm="60" flex-md="50" flex-gt-md="30">
     <md-dialog-content class="">
         <md-tabs md-dynamic-height md-border-bottom md-stretch-tabs="always">
             <md-tab label="Log In">
                 <md-content class="md-padding">
-                    <form name="formLogin" ng-submit="login.login()" novalidate>
+                    <form name="formLogin" ng-submit="main.login()" novalidate>
                         <md-input-container>
                             <label>Email</label>
-                            <input type="email" required name="email" ng-model="login.email">
+                            <input type="email" required name="email" ng-model="main.email">
                             <div ng-messages="formLogin.email.$error" ng-if="formLogin.email.$dirty || formLogin.$submitted">
                                 <div ng-message="required">Email is required.</div>
                                 <div ng-message="email">Email is invalid.</div>
@@ -14,7 +14,7 @@
                         </md-input-container>
                         <md-input-container>
                             <label>Password</label>
-                            <input type="password" required name="password" ng-model="login.password">
+                            <input type="password" required name="password" ng-model="main.password">
                             <div ng-messages="formLogin.password.$error" ng-if="formLogin.password.$dirty || formLogin.$submitted">
                                 <div ng-message="required">Password is required.</div>
                             </div>
@@ -22,27 +22,27 @@
                         <md-input-container>
                             <md-button flex class="md-raised md-primary">Log In</md-button>
                         </md-input-container>
-                        <md-input-container flex>
-                            <md-button ng-click="login.fbLogin()" class="fb-btn">
-                                Facebook
-                            </md-button>
-                        </md-input-container>
                     </form>
+                    <md-input-container flex md-theme="blue">
+                        <md-button ng-click="main.fbLogin()" class="md-raised md-primary">
+                            Facebook
+                        </md-button>
+                    </md-input-container>
                 </md-content>
             </md-tab>
             <md-tab label="Sign Up">
                 <md-content class="md-padding">
-                    <form name="formSignUp" ng-submit="login.login()" novalidate>
+                    <form name="formSignUp" ng-submit="main.signUp()" novalidate>
                         <md-input-container>
                             <label>Nick Name</label>
-                            <input type="text" required name="username" ng-model="login.userName">
+                            <input type="text" required name="username" ng-model="main.userName">
                             <div ng-messages="formSignUp.username.$error" ng-if="formSignUp.username.$dirty">
                                 <div ng-message="required">User name is required.</div>
                             </div>
                         </md-input-container>
                         <md-input-container>
                             <label>Email</label>
-                            <input type="email" required name="email" ng-model="login.email">
+                            <input type="email" required name="email" ng-model="main.email">
                             <div ng-messages="formSignUp.email.$error" ng-if="formSignUp.email.$dirty">
                                 <div ng-message="required">Email is required.</div>
                                 <div ng-message="email">Email is invalid.</div>
@@ -50,7 +50,7 @@
                         </md-input-container>
                         <md-input-container>
                             <label>Password</label>
-                            <input type="password" required name="password" ng-model="login.password">
+                            <input type="password" required name="password" ng-model="main.password">
                             <div ng-messages="formSignUp.password.$error" ng-if="formSignUp.password.$dirty">
                                 <div ng-message="required">Password is required.</div>
                             </div>
@@ -58,12 +58,12 @@
                         <md-input-container>
                             <md-button flex class="md-raised md-primary">Sign Up</md-button>
                         </md-input-container>
-                        <md-input-container flex>
-                            <md-button ng-click="login.fbLogin()" class="fb-btn">
-                                Facebook
-                            </md-button>
-                        </md-input-container>
                     </form>
+                    <md-input-container flex>
+                        <md-button ng-click="main.fbLogin()" class="fb-btn">
+                            Facebook
+                        </md-button>
+                    </md-input-container>
                 </md-content>
             </md-tab>
         </md-tabs>
