--- a/public/css/site.styl
+++ b/public/css/site.styl
@@ -182,11 +182,23 @@ html, body{
 	padding-right: 16px;
 }
 
-//MD
-.md-button{
-	border-radius: 0!important;
+.dish-hero{
+	position:relative;
 }
 
+.share-buttons{
+	position:absolute;
+	bottom: 20px;
+	left: 20px;
+}
+
+.comment-button{
+	position:fixed;
+	right: 20px;
+	bottom:40px;
+}
+
+//MD
 md-list{
 	padding: 0;
 }
