--- a/public/css/site.styl
+++ b/public/css/site.styl
@@ -198,6 +198,28 @@ html, body{
 	bottom:40px;
 }
 
+//Dish All Page
+.list-item-container{
+	margin-bottom: 16px;
+}
+
+.list-item-footer{
+	border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+}
+
+.list-item-container img{
+	width: 100%;
+	border: 1px solid rgba(0,0,0, 0.2);
+}
+
+.list-item-container .md-subhead{
+	margin: 8px 0;
+}
+
+.plain-tag{
+	margin-right: 5px;
+}
+
 //MD
 md-list{
 	padding: 0;
