--- a/public/assets/site.css
+++ b/public/assets/site.css
@@ -154,6 +154,22 @@ body {
   right: 20px;
   bottom: 40px;
 }
+.list-item-container {
+  margin-bottom: 16px;
+}
+.list-item-footer {
+  border-bottom: 1px solid rgba(0,0,0,0.3);
+}
+.list-item-container img {
+  width: 100%;
+  border: 1px solid rgba(0,0,0,0.2);
+}
+.list-item-container .md-subhead {
+  margin: 8px 0;
+}
+.plain-tag {
+  margin-right: 5px;
+}
 md-list {
   padding: 0;
 }
