--- a/public/css/site.styl
+++ b/public/css/site.styl
@@ -21,6 +21,11 @@ html, body{
 	border-radius: 50%;
 }
 
+.big-icon{
+	height: 48px;
+	width: 48px;
+}
+
 //mobile menu
 .mobile-menu-container{
 	height:101px;
@@ -173,6 +178,16 @@ html, body{
 }
 
 //Dish detail Page
+.bottom-actions-container{
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	background-color: rgba(0,0,0,0.2);
+	width: 100%;
+	color: #FFF;
+	height:80px;
+}
+
 .blog{
 	margin-bottom: 10px;
 	text-align: justify;
@@ -192,10 +207,19 @@ html, body{
 	left: 20px;
 }
 
-.comment-button{
+.speed-menu{
 	position:fixed;
 	right: 20px;
 	bottom:40px;
+}
+
+.right-col img{
+	width: 100%;
+	border: 1px solid rgba(0,0,0,0.2)
+}
+
+.related-item{
+	margin-bottom: 10px;
 }
 
 //Dish All Page
@@ -245,4 +269,41 @@ label.md-title{
   transition: all linear 0.4s;
 }
 
+//overwrite booklet style
+.booklet .b-page-cover{
+	background:none;
+}
 
+.book-img-page{
+	height: 100%;
+	background-size:cover!important;
+}
+
+.img-mask{
+	background-color: rgba(0,0,0,0.2);
+	width:100%;
+	height:100%;
+}
+
+.book-title{
+	color: #FFF;
+	text-align:center;
+}
+
+.book-text{
+	padding: 16px;
+}
+
+.book-backdrop{
+	position:absolute;
+	top:0;
+	left:0;
+	width:100%;
+	height:100%;
+	background-color: rgba(0,0,0,0.8);
+	z-index:79;
+}
+
+md-dialog-content.book-container{
+	padding: 14px;
+}
