--- a/public/assets/site.css
+++ b/public/assets/site.css
@@ -32,6 +32,12 @@ html>body .full-height-content {
   width: 100%;
   background-color: rgba(255,255,255,0.5);
 }
+.primary-bar {
+  background-color: #f27242;
+}
+.primary-bar .logo-text {
+  color: #fff;
+}
 .responsive-img {
   width: 100%;
   height: 100%;
@@ -60,7 +66,8 @@ html>body .full-height-content {
   height: 0px;
 }
 #divLanding {
-  background: url("../images/landing-background.jpg") center center no-repeat scroll;
+  background: url("../images/landing-background.png") center no-repeat scroll;
+  background-size: cover;
 }
 .hero-container {
   background-image: url("https://assets0.munchery.com/assets/referral/referrals-page-hero20@2x-14ed2ae984b7fd3e9fa937352f732f5e.jpg");
@@ -73,9 +80,19 @@ html>body .full-height-content {
   height: 400px;
 }
 .hero-btn {
-  margin: 0 15px;
-  height: 36px;
-  width: 100px;
+  border: 1px solid #f27242;
+  color: #f27242;
+  border-radius: 20px;
+  height: 40px;
+  width: 200px;
+  font-size: 16px;
+}
+.solid-btn {
+  color: #fff;
+  background-color: #f27242;
+}
+.tile-grid-container {
+  padding-top: 64px;
 }
 .tile-grid-container md-grid-tile {
   transition: all 500ms ease-out;
@@ -152,6 +169,7 @@ html>body .full-height-content {
 .login-btn-icon {
   height: 48px;
   width: 48px;
+  color: #fff;
 }
 .fb-btn {
   background-color: #6984b4;
